--- a/index.html
+++ b/index.html
@@ -1,118 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>[Your Name] - Portfolio</title>
+    <style>
+        /* --- 1. Global Styles & Typography (Apple Look) --- */
+        :root {
+            --apple-black: #1d1d1f;
+            --apple-gray: #6e6e73;
+            --apple-light-gray: #f5f5f7;
+            --apple-blue: #0071e3;
+            --border-color: #d2d2d7;
+            --section-padding: 5rem 0;
+        }
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: #ffffff;
+            color: var(--apple-black);
+            line-height: 1.6;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
 
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
-  </head>
+        .container {
+            max-width: 980px; /* Classic Apple container width */
+            margin: 0 auto;
+            padding: 0 22px;
+        }
 
-  <body>
+        h1, h2, h3, h4 {
+            font-weight: 600;
+            line-height: 1.2;
+            letter-spacing: -0.01em;
+        }
 
-    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+        h1 {
+            font-size: 3.5rem; /* 56px */
+            margin-bottom: 1rem;
+        }
+
+        h2 {
+            font-size: 2.5rem; /* 40px */
+            margin-bottom: 1.5rem;
+            text-align: center;
+        }
+
+        h3 {
+            font-size: 1.5rem; /* 24px */
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            font-size: 1.0625rem; /* 17px */
+            color: var(--apple-gray);
+            margin-bottom: 1rem;
+        }
+
+        a {
+            color: var(--apple-blue);
+            text-decoration: none;
+        }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+        /* --- 2. Navigation Bar --- */
+        .main-nav {
+            /* Glassmorphism effect */
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border-bottom: 1px solid var(--border-color);
+            padding: 1rem 0;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        .nav-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 0 22px;
+        }
+
+        .nav-brand {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: var(--apple-black);
+        }
+
+        .nav-links {
+            list-style: none;
+            display: flex;
+            gap: 2rem;
+        }
+
+            .nav-links a {
+                font-size: 0.9rem; /* 14px */
+                font-weight: 500;
+                color: var(--apple-black);
+            }
+
+        /* --- 3. Hero Section --- */
+        .hero {
+            text-align: center;
+            padding: var(--section-padding);
+        }
+
+            .hero .subtitle {
+                font-size: 1.75rem; /* 28px */
+                color: var(--apple-gray);
+                font-weight: 500;
+            }
+
+        /* --- 4. Projects Section --- */
+        .projects {
+            background-color: var(--apple-light-gray);
+            padding: var(--section-padding);
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .project-card {
+            background: #ffffff;
+            border-radius: 18px; /* Apple's rounded corners */
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+            .project-card:hover {
+                transform: translateY(-5px);
+            }
+
+            .project-card img {
+                width: 100%;
+                height: 220px;
+                object-fit: cover;
+                display: block;
+            }
+
+        .project-content {
+            padding: 1.5rem;
+        }
+
+            .project-content h3 {
+                color: var(--apple-black);
+            }
+
+            .project-content p {
+                font-size: 1rem;
+                margin-bottom: 1rem;
+            }
+
+        /* --- 5. About Section --- */
+        .about {
+            padding: var(--section-padding);
+            max-width: 760px; /* Narrower for reading */
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        /* --- 6. Footer --- */
+        footer {
+            padding: 3rem 0;
+            text-align: center;
+            border-top: 1px solid var(--border-color);
+            background: var(--apple-light-gray);
+        }
+
+        .footer-content {
+            color: var(--apple-gray);
+            font-size: 0.9rem;
+        }
+
+        .footer-links {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+            .footer-links a {
+                color: var(--apple-gray);
+                font-weight: 500;
+            }
+    </style>
+</head>
+<body>
+
+    <nav class="main-nav">
+        <div class="nav-container">
+            <a href="#" class="nav-brand">[Your Name]</a>
+            <ul class="nav-links">
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="mailto:your-email@example.com">Contact</a></li>
+            </ul>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
     </nav>
 
-    <div class="container">
+    <main>
 
-      <div class="row">
+        <header class="hero container">
+            <h1>Hello. I'm [Your Name].</h1>
+            <p class="subtitle">I design and build things for the web and mobile.</p>
+            <a href="#projects" class="cta-link">See my work &rarr;</a>
+        </header>
 
-        <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+        <section id="projects" class="projects">
+            <div class="container">
+                <h2>My Projects</h2>
+                <div class="project-grid">
+
+                    <div class="project-card">
+                        <img src="https://via.placeholder.com/800x450/f5f5f7/1d1d1f?text=Project+Image" alt="Project 1 Screenshot">
+                        <div class="project-content">
+                            <h3>Project Title One</h3>
+                            <p>A brief, compelling description of your project, what it does, and what technologies you used (e.g., Unity, Blender, etc.).</p>
+                            <a href="#">View Case Study &rarr;</a>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <img src="https://via.placeholder.com/800x450/f5f5f7/1d1d1f?text=Project+Image" alt="Project 2 Screenshot">
+                        <div class="project-content">
+                            <h3>Project Title Two</h3>
+                            <p>A brief, compelling description of your project, what it does, and what technologies you used (e.g., Python, Scikit-learn, etc.).</p>
+                            <a href="#">View on GitHub &rarr;</a>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <img src="https://via.placeholder.com/800x450/f5f5f7/1d1d1f?text=Project+Image" alt="Project 3 Screenshot">
+                        <div class="project-content">
+                            <h3>Project Title Three</h3>
+                            <p>A brief, compelling description of your project. This one could be about your VR development work, for example.</p>
+                            <a href="#">Play on Steam &rarr;</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section id="about" class="about container">
+            <h2>About Me</h2>
+            <p style="color: var(--apple-black); font-size: 1.25rem; font-weight: 500;">
+                I'm a passionate developer with experience in 3D modeling, game development, and data science.
+            </p>
+            <p>
+                From creating immersive VR experiences in Unity to building shaders and analyzing data with Python, I love tackling complex challenges. My work is currently published on mobile app stores and I'm expanding to new platforms.
+            </p>
+        </section>
+
+    </main>
+
+    <footer>
+        <div class="container footer-content">
+            <ul class="footer-links">
+                <li><a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/your-username" target="_blank">GitHub</a></li>
+                <li><a href="https://your-twitter-handle" target="_blank">Twitter / X</a></li>
+            </ul>
+            <p>&copy; 2025 [Your Name]. All rights reserved.</p>
         </div>
+    </footer>
 
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-        </div>
-
-      </div>
-
-      <hr>
-
-      <div class="row text-center">
-        
-        <div class="col-lg-12">
-          <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">&raquo;</a></li>
-          </ul>        
-        </div>
-
-      </div>
-
-    </div><!-- /.container -->
-
-    <div class="container">
-
-      <hr>
-
-      <footer>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
-          </div>
-        </div>
-      </footer>
-      
-    </div><!-- /.container -->
-
-    <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script type="text/javascript">
-      var dt = new Date();
-      document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
-    </script>
-  </body>
-
+</body>
 </html>
