--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Adınız Soyadınız] - Geliştirici Portfolyosu</title>
+    <title>Berat Taş - Geliştirici Portfolyosu</title>
     <style>
         /* --- 1. Global Stiller ve Renk Paleti --- */
         :root {
@@ -308,7 +308,7 @@
 
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="#" class="nav-brand">[Adınız Soyadınız]</a>
+            <a href="#" class="nav-brand">Berat Taş</a>
             <ul class="nav-links">
                 <li><a href="#projects">Projeler</a></li>
                 <li><a href="#about">Hakkımda</a></li>
@@ -321,7 +321,7 @@
 
         <header class="hero">
             <div class="container">
-                <h1>Merhaba, ben [Adınız].</h1>
+                <h1>Merhaba, ben Berat.</h1>
                 <p class="subtitle">Unity, Blender ve Python ile sürükleyici deneyimler<br>ve akıllı çözümler geliştiren bir yazılımcıyım.</p>
                 <a href="#projects" class="cta-button">Projelerimi Gör</a>
                 <a href="mailto:email@adresiniz.com" class="cta-button secondary">Bana Ulaşın</a>
@@ -398,7 +398,7 @@
         <div class="container footer-content">
              <ul class="footer-links">
                 <li>
-                    <a href="https://www.linkedin.com/in/profiliniz" target="_blank" title="LinkedIn">
+                    <a href="https://www.linkedin.com/in/berattas/" target="_blank" title="LinkedIn">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                     </a>
                 </li>
@@ -408,7 +408,7 @@
                     </a>
                 </li>
             </ul>
-            <p>&copy; 2025 [Adınız Soyadınız]. Tüm hakları saklıdır.</p>
+            <p>&copy; 2025 Berat Taş. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
