--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
         <header class="hero">
             <div class="container">
-                <img src=img/profile.jpg alt="Berat Taş Profil Fotoğrafı" class="profile-picture">
+                <img src=img/profile.jpeg alt="Berat Taş Profil Fotoğrafı" class="profile-picture">
                 <h1>Merhaba, ben Berat.</h1>
                 <p class="subtitle">Unity, Blender ve Python ile sürükleyici deneyimler<br>ve akıllı çözümler geliştiren bir yazılımcıyım.</p>
                 <a href="#projects" class="cta-button">Projelerimi Gör</a>
@@ -433,4 +433,5 @@
 
 </body>
 </html>
+
 
