--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+Harika\! Bunch 3D projesi için istediğin görseli ekledim.
+
+`project-card` içindeki `<img>` etiketinin `src` özelliğini verdiğin LinkedIn görsel linkiyle güncelledim.
+
+İşte en güncel `index.html` dosyanız:
+
+-----
+
+## Berat Taş - Portfolyo HTML (Bunch 3D Görseli Güncellendi)
+
+```html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -380,7 +391,7 @@
                 <div class="project-grid">
                     
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/800x450/1c1c1e/ffffff?text=Bunch+3D" alt="Bunch 3D Ekran Görüntüsü">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D2DAQFnmNHWOpPzFQ/profile-treasury-image-shrink_480_480/B4DZoIP84DGkAM-/0/1761074991747?e=1761750000&v=beta&t=nHlt6cygwKiRf9XGVQnYyAFQ-AA2E7GZ4GQsgIAmzs8" alt="Bunch 3D Ekran Görüntüsü">
                         <div class="project-content">
                             <h3 data-key="project1_title">Bunch 3D</h3>
                             <div class="project-tags">
@@ -589,3 +600,4 @@
 
 </body>
 </html>
+```
