--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-Harika\! Bunch 3D projesi için istediğin görseli ekledim.
+Tamamdır, ikinci projeyi de "Throw Master" olarak güncelledim.
 
-`project-card` içindeki `<img>` etiketinin `src` özelliğini verdiğin LinkedIn görsel linkiyle güncelledim.
+İstediğin görseli, Meta Quest Store linkini ve bu projeye özel (Türkçe ve İngilizce) açıklamaları hem HTML'e hem de JavaScript'teki `translations` objesine ekledim.
 
-İşte en güncel `index.html` dosyanız:
+İşte sitenin en güncel `index.html` dosyası:
 
 -----
 
-## Berat Taş - Portfolyo HTML (Bunch 3D Görseli Güncellendi)
+## Berat Taş - Portfolyo HTML (Proje 2 Güncellendi)
 
 ```html
 <!DOCTYPE html>
@@ -405,16 +405,16 @@ Harika\! Bunch 3D projesi için istediğin görseli ekledim.
                     </div>
                     
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/800x450/1c1c1e/ffffff?text=VR+Proje+Görseli" alt="Proje 2 Ekran Görüntüsü">
+                        <img src="https://scontent-pmo1-1.oculuscdn.com/v/t64.5771-25/491825050_1492764355364777_3524122921729086124_n.jpg?stp=dst-jpg_q92_s1440x1440_tt6&_nc_cat=110&ccb=1-7&_nc_sid=6e7a0a&_nc_ohc=u8bIwVRiuNIQ7kNvwEbujjO&_nc_oc=Adm2PaWwsWJXFo3Rr8PpIkE-V8iidsiwsIME_rQGskZabx54TFK1TS1n1Qyp5UfLPeRbKxcU_t5GhJuGBLdzJSKC&_nc_zt=3&_nc_ht=scontent-pmo1-1.oculuscdn.com&oh=00_Affe4zFhIpmZGINHUG3WAa6u08ssm9ijIF5OBGzZ1COh7g&oe=68FEC6F1" alt="Throw Master Ekran Görüntüsü">
                         <div class="project-content">
-                            <h3 data-key="project2_title">[VR Proje Adı]</h3>
+                            <h3 data-key="project2_title">Throw Master</h3>
                              <div class="project-tags">
                                 <span class="tag">Unity</span>
                                 <span class="tag">VR</span>
-                                <span class="tag">Blender</span>
+                                <span class="tag">Meta Quest</span>
                             </div>
-                            <p data-key="project2_desc">Tamamen sürükleyici bir sanal gerçeklik deneyimi. [Projenin amacı veya özelliği].</p>
-                            <a href="#" data-key="project2_link">GitHub'da Gör &rarr;</a>
+                            <p data-key="project2_desc">Becerilerinizi test eden, bağımlılık yapıcı bir VR arcade oyunu. Çeşitli nesneleri fırlatın, hedefleri vurun ve en yüksek skora ulaşın.</p>
+                            <a href="https://www.meta.com/tr-tr/experiences/throw-master/24337675112595406/" target="_blank" data-key="project2_link">Meta Store'da İncele &rarr;</a>
                         </div>
                     </div>
                     
@@ -522,9 +522,9 @@ Harika\! Bunch 3D projesi için istediğin görseli ekledim.
                 project1_title: "Bunch 3D",
                 project1_desc: "Hız ve stratejinin anahtar olduğu, hızlı tempolu bir 3D bulmaca macerası. Nesneleri toplayın, engellerden kaçın ve liderlik tablosuna tırmanın.",
                 project1_link: "App Store'da İncele &rarr;",
-                project2_title: "[VR Proje Adı]",
-                project2_desc: "Tamamen sürükleyici bir sanal gerçeklik deneyimi. [Projenin amacı veya özelliği].",
-                project2_link: "GitHub'da Gör &rarr;",
+                project2_title: "Throw Master",
+                project2_desc: "Becerilerinizi test eden, bağımlılık yapıcı bir VR arcade oyunu. Çeşitli nesneleri fırlatın, hedefleri vurun ve en yüksek skora ulaşın.",
+                project2_link: "Meta Store'da İncele &rarr;",
                 project3_title: "Veri Madenciliği Analizi",
                 project3_desc: "Dengesiz (imbalanced) bir veri seti üzerinde sınıflandırma ve analiz.",
                 project3_link: "Raporu Oku &rarr;",
@@ -547,9 +547,9 @@ Harika\! Bunch 3D projesi için istediğin görseli ekledim.
                 project1_title: "Bunch 3D",
                 project1_desc: "A fast-paced 3D puzzle adventure where speed and strategy are key. Collect objects, dodge obstacles, and climb the leaderboard.",
                 project1_link: "View on App Store &rarr;",
-                project2_title: "[VR Project Name]",
-                project2_desc: "A fully immersive virtual reality experience. [Project's purpose or feature].",
-                project2_link: "View on GitHub &rarr;",
+                project2_title: "Throw Master",
+                project2_desc: "An addictive VR arcade game that tests your skills. Throw various objects, hit targets, and achieve the highest score.",
+                project2_link: "View on Meta Store &rarr;",
                 project3_title: "Data Mining Analysis",
                 project3_desc: "Classification and analysis on an imbalanced dataset.",
                 project3_link: "Read Report &rarr;",
