--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-Tamamdır, üçüncü ve son proje kartını da "Arise to The Sky" için App Store bilgilerine göre güncelledim.
+Harika\! "Arise to The Sky" projesinin görselini belirttiğin App Store ekran görüntüsüyle güncelledim ve faviconu da düzelttim.
 
-Proje kartını ve JavaScript `translations` objesini oyunun açıklaması, linki ve etiketleri ile doldurdum. Bu proje için bir görsel sağlamadığın için "Arise to The Sky" yazan bir yer tutucu görsel ekledim.
+Favicon için, SVG içeriğini doğrudan `<link rel="icon">` etiketine gömdüm. Bu, daha temiz bir çözüm ve harici bir dosyaya ihtiyaç duymaz.
 
-İşte sitenin en güncel ve tamamlanmış `index.html` hali:
+İşte güncellenmiş `index.html` dosyan:
 
 -----
 
-## Berat Taş - Portfolyo HTML (Proje 3 Güncellendi)
+## Berat Taş - Portfolyo HTML (Arise to The Sky Görseli ve Favicon Düzeltildi)
 
 ```html
 <!DOCTYPE html>
@@ -430,7 +430,7 @@ Proje kartını ve JavaScript `translations` objesini oyunun açıklaması, link
                     </div>
                     
                     <div class="project-card">
-                        <img src="https://via.placeholder.com/800x450/1c1c1e/ffffff?text=Arise+to+The+Sky" alt="Arise to The Sky Ekran Görüntüsü">
+                        <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/a4/09/b3/a409b30c-51dd-b5b5-7c90-282d5a375490/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png" alt="Arise to The Sky Ekran Görüntüsü">
                         <div class="project-content">
                             <h3 data-key="project3_title">Arise to The Sky</h3>
                              <div class="project-tags">
