--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-Elbette, `mailto:` linklerindeki `email@adresiniz.com` adresini istediğiniz `berattas5834@gmail.com` adresiyle güncelledim.
-
-Artık "İletişim" ve "Bana Ulaşın" butonlarına tıklandığında varsayılan e-posta istemcisi bu adrese yönlendirilmiş bir taslak açacaktır.
-
-İşte kodun tamamı:
-
-```html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -260,7 +253,256 @@ Artık "İletişim" ve "Bana Ulaşın" butonlarına tıklandığında varsayıla
             display: flex;
             flex-wrap: wrap;
             gap: 1rem 1.5rem; /* Satır ve sütun boşlukları */
-  _http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.034c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.109-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.h372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+        }
+
+        /* --- 6. Yetenekler Bölümü --- */
+        .skills-section {
+            background-color: #ffffff;
+            padding: 5rem 0;
+            text-align: center;
+        }
+
+        .skills-section h2 { margin-bottom: 2rem; color: var(--text-dark); }
+
+        .skills-grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2.5rem;
+            margin-top: 3rem;
+        }
+
+        .skill-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.75rem;
+            width: 100px;
+            text-align: center;
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: color 0.2s ease;
+        }
+        
+        .skill-item i {
+            font-size: 60px;
+            color: var(--text-dark);
+            transition: color 0.2s ease, transform 0.2s ease;
+        }
+
+        .skill-item:hover i {
+            color: var(--primary-color);
+            transform: translateY(-5px);
+        }
+        
+        .skill-item:hover span { color: var(--primary-color); }
+
+        /* --- 7. Hakkımda Bölümü --- */
+        .about {
+            background: var(--bg-light);
+            padding: 5rem 0;
+            max-width: 760px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        
+        .about h2 { margin-bottom: 1.5rem; }
+
+        .about p.lead {
+            color: var(--text-dark);
+            font-size: 1.25rem;
+            font-weight: 500;
+            margin-bottom: 1.5rem;
+        }
+
+        /* --- 8. Footer --- */
+        footer {
+            padding: 4rem 0;
+            text-align: center;
+            background: var(--bg-light);
+            border-top: 1px solid var(--border-color);
+        }
+
+        .footer-links {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin-bottom: 1.5rem;
+        }
+        
+        .footer-links a {
+            color: var(--text-secondary);
+            transition: color 0.2s ease, transform 0.2s ease;
+            display: inline-block;
+        }
+        
+        .footer-links a:hover {
+            color: var(--primary-color);
+            transform: scale(1.1);
+        }
+        
+        .footer-links svg { width: 24px; height: 24px; fill: currentColor; }
+        .footer-content p { color: var(--text-secondary); font-size: 0.9rem; }
+
+    </style>
+</head>
+<body>
+
+    <nav class="main-nav">
+        <div class="nav-container">
+            <a href="#" class="nav-brand">Berat Taş</a>
+            
+            <div class="nav-right-group">
+                <ul class="nav-links">
+                    <li><a href="#projects" data-key="nav_projects">Projeler</a></li>
+                    <li><a href="#skills" data-key="nav_skills">Yetenekler</a></li>
+                    <li><a href="#about" data-key="nav_about">Hakkımda</a></li>
+                    <li><a href="mailto:email@adresiniz.com" data-key="nav_contact">İletişim</a></li>
+                </ul>
+                <button id="lang-toggle-btn" class="lang-toggle">
+                    <span id="lang-tr">TR</span> / <span id="lang-en">EN</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+
+        <header class="hero">
+            <div class="container">
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQFLUM26FQ0l6A/profile-displayphoto-scale_400_400/B4DZoHo1qBGQAg-/0/1761064740203?e=1762992000&v=beta&t=kh8DkSdBW4iBypXRMTLvHVAJLyWOxKYt32g9iKJEeqU" alt="Berat Taş Profil Fotoğrafı" class="profile-picture">
+                <h1 data-key="hero_greeting">Merhaba, ben Berat.</h1>
+                <p class="subtitle" data-key="hero_subtitle">Unity, Blender ve Python ile sürükleyici deneyimler<br>ve akıllı çözümler geliştiren bir yazılımcıyım.</p>
+                <a href="#projects" class="cta-button" data-key="hero_cta_main">Projelerimi Gör</a>
+                <a href="mailto:email@adresiniz.com" class="cta-button secondary" data-key="hero_cta_secondary">Bana Ulaşın</a>
+            </div>
+        </header>
+
+        <section id="projects" class="projects">
+            <div class="container">
+                <h2 class="section-heading" data-key="projects_title">Öne Çıkan Projeler</h2>
+                <div class="project-grid">
+                    
+                    <div class="project-card">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D2DAQFnmNHWOpPzFQ/profile-treasury-image-shrink_480_480/B4DZoIP84DGkAM-/0/1761074991747?e=1761750000&v=beta&t=nHlt6cygwKiRf9XGVQnYyAFQ-AA2E7GZ4GQsgIAmzs8" alt="Bunch 3D Ekran Görüntüsü">
+                        <div class="project-content">
+                            <h3 data-key="project1_title">Bunch 3D</h3>
+                            <div class="project-tags">
+                                <span class="tag">Unity</span>
+                                <span class="tag">iOS</span>
+                                <span class="tag">Android</span>
+                            </div>
+                            <p data-key="project1_desc">Hız ve stratejinin anahtar olduğu, hızlı tempolu bir 3D bulmaca macerası. Nesneleri toplayın, engellerden kaçın ve liderlik tablosuna tırmanın.</p>
+                            <div class="project-links">
+                                <a href="https://apps.apple.com/us/app/bunch-3d/id6651823378" target="_blank" data-key="project1_link_appstore">App Store'da İncele &rarr;</a>
+                                <a href="https://play.google.com/store/apps/details?id=com.mbrsoftware.matchn&hl=tr" target="_blank" data-key="project1_link_googleplay">Google Play'de İncele &rarr;</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="project-card">
+                        <img src="https://scontent-pmo1-1.oculuscdn.com/v/t64.5771-25/491825050_1492764355364777_3524122921729086124_n.jpg?stp=dst-jpg_q92_s1440x1440_tt6&_nc_cat=110&ccb=1-7&_nc_sid=6e7a0a&_nc_ohc=u8bIwVRiuNIQ7kNvwEbujjO&_nc_oc=Adm2PaWwsWJXFo3Rr8PpIkE-V8iidsiwsIME_rQGskZabx54TFK1TS1n1Qyp5UfLPeRbKxcU_t5GhJuGBLdzJSKC&_nc_zt=3&_nc_ht=scontent-pmo1-1.oculuscdn.com&oh=00_Affe4zFhIpmZGINHUG3WAa6u08ssm9ijIF5OBGzZ1COh7g&oe=68FEC6F1" alt="Throw Master Ekran Görüntüsü">
+                        <div class="project-content">
+                            <h3 data-key="project2_title">Throw Master</h3>
+                             <div class="project-tags">
+                                <span class="tag">Unity</span>
+                                <span class="tag">VR</span>
+                                <span class="tag">Meta Quest</span>
+                            </div>
+                            <p data-key="project2_desc">Becerilerinizi test eden, bağımlılık yapıcı bir VR arcade oyunu. Çeşitli nesneleri fırlatın, hedefleri vurun ve en yüksek skora ulaşın.</p>
+                            <div class="project-links">
+                                <a href="https://www.meta.com/tr-tr/experiences/throw-master/24337675112595406/" target="_blank" data-key="project2_link">Meta Store'da İncele &rarr;</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="project-card">
+                        
+<img src="img/arise.png" alt="Arise to The Sky Ekran Görüntüsü">
+                        <div class="project-content">
+                            <h3 data-key="project3_title">Arise to The Sky</h3>
+                             <div class="project-tags">
+                                <span class="tag">Unity</span>
+                                <span class="tag">iOS</span>
+                                <span class="tag">Hyper Casual</span>
+                            </div>
+                            <p data-key="project3_desc">Basit ama bağımlılık yaratan oynanışa sahip, hızlı ve eğlenceli bir mobil oyun. Engelleri aşın, puanları toplayın ve zirveye yükselin.</p>
+                            <div class="project-links">
+                                <a href="https://apps.apple.com/us/app/arise-to-the-sky/id1672673470" target="_blank" data-key="project3_link">App Store'da İncele &rarr;</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="skills-section">
+            <div class="container">
+                <h2 class="section-heading" data-key="skills_title">Yeteneklerim</h2>
+                <div class="skills-grid">
+                    
+                    <div class="skill-item">
+                        <i class="devicon-unity-original"></i>
+                        <span>Unity</span>
+                    </div>
+
+                    <div class="skill-item">
+                        <i class="devicon-csharp-plain"></i>
+                        <span>C#</span>
+                    </div>
+
+                    <div class="skill-item">
+                        <i class="devicon-unrealengine-original"></i>
+                        <span>Unreal Engine</span>
+                    </div>
+
+                    <div class="skill-item">
+                        <i class="devicon-blender-original"></i>
+                        <span>Blender</span>
+                    </div>
+
+                    <div class="skill-item">
+                        <i class="devicon-firebase-plain"></i>
+                        <span>Firebase</span>
+                    </div>
+                    
+                    <div class="skill-item">
+                        <i class="devicon-python-original"></i>
+                        <span>Python</span>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        
+        <section id="about" class="about container">
+            <h2 data-key="about_title">Hakkımda</h2>
+            <p class="lead" data-key="about_lead">
+                Oyun geliştirmeden veri bilimine uzanan geniş bir yelpazede yenilikçi projeler üretmeyi seviyorum.
+            </p>
+            <p data-key="about_p">
+                Unity ve Blender kullanarak 3D modeller, karakterler (ışık ampulü kötü adam gibi!) ve özel shader'lar oluşturmaktan keyif alıyorum. Aynı zamanda Python'un gücünü kullanarak veri analizi yapıyor ve makine öğrenmesi modelleri geliştiriyorum. Hem mobil marketlerde hem de Steam gibi platformlarda oyun yayınlama tecrübem bulunuyor.
+            </p>
+        </section>
+
+    </main>
+
+    <footer>
+        <div class="container footer-content">
+             <ul class="footer-links">
+                <li>
+                    <a href="https://www.linkedin.com/in/berattas/" target="_blank" title="LinkedIn">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                    </a>
+                </li>
+                <li>
+                    
+                    <a href="https://github.com/Berattas" target="_blank" title="GitHub">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.034c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.109-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.h372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                     </a>
                 </li>
             </ul>
@@ -314,7 +556,7 @@ Artık "İletişim" ve "Bana Ulaşın" butonlarına tıklandığında varsayıla
                 project1_link_googleplay: "View on Google Play &rarr;",
                 project2_title: "Throw Master",
                 project2_desc: "An addictive VR arcade game that tests your skills. Throw various objects, hit targets, and achieve the highest score.",
-Görüntüleme &rarr;",
+                project2_link: "View on Meta Store &rarr;",
                 project3_title: "Arise to The Sky",
                 project3_desc: "A quick and fun hyper-casual mobile game with simple yet addictive gameplay. Navigate obstacles, collect points, and rise to the top.",
                 project3_link: "View on App Store &rarr;",
@@ -365,4 +607,3 @@ Görüntüleme &rarr;",
 
 </body>
 </html>
-```
