--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 nav_about: "About",
                 nav_contact: "Contact",
                 hero_greeting: "Hello, I'm Berat.",
-                hero_subtitle: "I'm a developer creating immersive experiences<br>and smart solutions with Unity, Blender, and Python.",
+                hero_subtitle: "Hey there! I'm a developer who enjoys making fun games and useful programs. I get to play with awesome tools like Unity, Blender, and Python pretty much every day. I'm also comfortable jumping into Unreal Engine for different challenges and using Figma to map out user-friendly designs. My passion is really just building things that people can enjoy and interact with.",
                 hero_cta_main: "See My Work",
                 hero_cta_secondary: "Contact Me",
                 projects_title: "Featured Projects",
@@ -607,3 +607,4 @@
 
 </body>
 </html>
+
