--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                 nav_about: "Hakkımda",
                 nav_contact: "İletişim",
                 hero_greeting: "Merhaba, ben Berat.",
-                hero_subtitle: "Unity, Blender ve Python ile sürükleyici deneyimler<br>ve akıllı çözümler geliştiren bir yazılımcıyım.",
+                hero_subtitle: "Benim Tutkum, Hayal gücümü Unity, Blender, Unreal Engine ve Figma gibi araçlarla interaktif ve eğlenceli oyunlara dönüştürmek.",
                 hero_cta_main: "Projelerimi Gör",
                 hero_cta_secondary: "Bana Ulaşın",
                 projects_title: "Öne Çıkan Projeler",
@@ -546,7 +546,7 @@
                 nav_about: "About",
                 nav_contact: "Contact",
                 hero_greeting: "Hello, I'm Berat.",
-                hero_subtitle: "Hey there! I'm a developer who enjoys making fun games and useful programs. I get to play with awesome tools like Unity, Blender, and Python pretty much every day. I'm also comfortable jumping into Unreal Engine for different challenges and using Figma to map out user-friendly designs. My passion is really just building things that people can enjoy and interact with.",
+                hero_subtitle: "My passion is turning imagination into interactive and fun games with tools like Unity, Blender, Unreal Engine, and Figma.",
                 hero_cta_main: "See My Work",
                 hero_cta_secondary: "Contact Me",
                 projects_title: "Featured Projects",
@@ -607,4 +607,5 @@
 
 </body>
 </html>
+
 
