--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
 
         <header class="hero">
             <div class="container">
-                <img src="https://ui-avatars.com/api/?name=Berat+Taş&background=007aff&color=fff&size=128" alt="Berat Taş Profil Fotoğrafı" class="profile-picture">
+                <!-- GÜNCELLENDİ: Profil resmi URL'si sizin verdiğiniz link ile değiştirildi. -->
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQFLUM26FQ0l6A/profile-displayphoto-scale_400_400/B4DZoHo1qBGQAg-/0/1761064740203?e=1762992000&v=beta&t=kh8DkSdBW4iBypXRMTLvHVAJLyWOxKYt32g9iKJEeqU" alt="Berat Taş Profil Fotoğrafı" class="profile-picture">
                 <h1 data-key="hero_greeting">Merhaba, ben Berat.</h1>
                 <p class="subtitle" data-key="hero_subtitle">Unity, Blender ve Python ile sürükleyici deneyimler<br>ve akıllı çözümler geliştiren bir yazılımcıyım.</p>
                 <a href="#projects" class="cta-button" data-key="hero_cta_main">Projelerimi Gör</a>
@@ -450,7 +451,6 @@
         <section id="skills" class="skills-section">
             <div class="container">
                 <h2 class="section-heading" data-key="skills_title">Yeteneklerim</h2>
-                <!-- GÜNCELLENDİ: Tüm ikonlar renkli hale getirildi ve 3D Printing logosu değiştirildi -->
                 <div class="skills-grid">
                     
                     <div class="skill-item">
@@ -513,7 +513,7 @@
                 Oyun geliştirmeden veri bilimine uzanan geniş bir yelpazede yenilikçi projeler üretmeyi seviyorum.
             </p>
             <p data-key="about_p">
-                Unity ve Blender kullanarak 3D modeller, karakterler (ışık ampulü kötü adam gibi!) ve özel shader'lar oluşturmaktan keyif alıyorum. Aynı zamanda Python'un gücünü kullanarak veri analizi yapıyor ve makine öğrenmesi modelleri geliştiriyorum. Hem mobil marketlerde hem de Steam gibi platformlarda oyun yayınlama tecrübem bulunuyor.
+                Unity ve Blender kullanarak 3D modeller, karakterler (ışık ampulü kötü adam gibi!) ve özel shader'lar oluşturmaktan keyif alıyorum. Aynı zamanda Python'un gücünü kullanarak veri analizi yapıyor ve makine öğrenmesi modelleri geliştiriyorum. Hem mobil marketlerde hem de Steam gibi platformlarda oyun yayınlama tecrübəm bulunuyor.
             </p>
         </section>
 
@@ -565,7 +565,7 @@
                 skills_title: "Yeteneklerim",
                 about_title: "Hakkımda",
                 about_lead: "Oyun geliştirmeden veri bilimine uzanan geniş bir yelpazede yenilikçi projeler üretmeyi seviyorum.",
-                about_p: "Unity ve Blender kullanarak 3D modeller, karakterler (ışık ampulü kötü adam gibi!) ve özel shader'lar oluşturmaktan keyif alıyorum. Aynı zamanda Python'un gücünü kullanarak veri analizi yapıyor ve makine öğrenmesi modelleri geliştiriyorum. Hem mobil marketlerde hem de Steam gibi platformlarda oyun yayınlama tecrübem bulunuyor.",
+                about_p: "Unity ve Blender kullanarak 3D modeller, karakterler (ışık ampulü kötü adam gibi!) ve özel shader'lar oluşturmaktan keyif alıyorum. Aynı zamanda Python'un gücünü kullanarak veri analizi yapıyor ve makine öğrenmesi modelleri geliştiriyorum. Hem mobil marketlerde hem de Steam gibi platformlarda oyun yayınlama tecrübəm bulunuyor.",
                 footer_copyright: "&copy; 2025 Berat Taş. Tüm hakları saklıdır."
             },
             'en': {
